--- a/styles/sidebar.scss
+++ b/styles/sidebar.scss
@@ -8,8 +8,6 @@ nav.sidebar {
   z-index: 2000;
   overflow-x: hidden;
   overflow-y: auto;
-  /* Scrollable contents if viewport is shorter than content. */
-  border-right: 1px solid #eee;
 
   .nav-item {
     cursor: pointer;
@@ -68,6 +66,7 @@ nav.sidebar {
   @media screen and (max-width: 767px) {
     width: 100vw;
     max-width: 100%;
+    top: 54px;
 
     .game-container {
       overflow: scroll;
